<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gmail.byron.ullauri.acronymrecall.ChoicesActivity">

    <TextView
        android:id="@+id/textViewYourChoices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_Your_Choices"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayoutOwl"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:id="@+id/imageViewSpeechBubble"
            android:layout_width="175dp"
            android:layout_height="125dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="21dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/description_image_speechbubble"
            app:srcCompat="@drawable/speech_bubble" />

        <ImageView
            android:id="@+id/imageViewOwl"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/description_image_owl"
            app:srcCompat="@drawable/owl_standing" />

        <TextView
            android:id="@+id/textViewSpeechText"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_alignStart="@+id/imageViewSpeechBubble"
            android:layout_alignTop="@+id/imageViewSpeechBubble"
            android:layout_marginStart="44dp"
            android:layout_marginTop="20dp"
            android:text="@string/owl_speech_choice"
            android:textAlignment="center" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayoutOwl"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewYourChoices">

        <TableLayout
            android:id="@+id/tableLayoutChoices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp" />
    </ScrollView>
</android.support.constraint.ConstraintLayout>
