<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gmail.byron.ullauri.acronymrecall.MenuActivity">

    <View
        android:id="@+id/horizontalStrut"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerVertical="true" />

    <View
        android:id="@+id/verticalStrut"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/horizontalStrut"
        android:layout_toStartOf="@id/verticalStrut"
        android:background="@color/lightgray" >

        <ImageView
            android:id="@+id/imageViewStudy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/menu_study"
            android:onClick="menuClick"
            app:srcCompat="@drawable/ic_import_contacts_black_48dp" />

        <TextView
            android:id="@+id/textViewStudy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageViewStudy"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:onClick="menuClick"
            android:text="@string/menu_study"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/horizontalStrut"
        android:layout_toEndOf="@id/verticalStrut"
        android:background="@color/white" >

        <ImageView
            android:id="@+id/imageViewCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/menu_create_acronym"
            android:onClick="menuClick"
            app:srcCompat="@drawable/ic_create_black_48dp" />

        <TextView
            android:id="@+id/textViewCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageViewCreate"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:onClick="menuClick"
            android:text="@string/menu_create_acronym"
            android:textAlignment="center"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/horizontalStrut"
        android:layout_toStartOf="@id/verticalStrut"
        android:background="@color/white" >

        <ImageView
            android:id="@+id/imageViewAcronyms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/menu_my_acronyms"
            android:onClick="menuClick"
            app:srcCompat="@drawable/ic_view_agenda_black_48dp" />

        <TextView
            android:id="@+id/textViewAcronyms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageViewAcronyms"
            android:layout_centerHorizontal="true"
            android:onClick="menuClick"
            android:text="@string/menu_my_acronyms"
            android:textAlignment="center"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/horizontalStrut"
        android:layout_toEndOf="@id/verticalStrut"
        android:background="@color/lightgray" >

        <ImageView
            android:id="@+id/imageViewInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/menu_info"
            android:onClick="menuClick"
            app:srcCompat="@drawable/ic_info_black_48dp" />

        <TextView
            android:id="@+id/textViewInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageViewInfo"
            android:layout_centerHorizontal="true"
            android:onClick="menuClick"
            android:text="@string/menu_info"
            android:textSize="18sp" />
    </RelativeLayout>

</RelativeLayout>